--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^5.5.2",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
+    "react-calendar": "^2.17.4",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.3.1"
   }
