--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.0",
     "firebase": "^5.5.2",
+    "input-moment": "^0.4.0",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-calendar": "^2.17.4",
