--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^5.5.2",
     "input-moment": "^0.4.0",
     "jquery": "^3.1.1",
+    "nodemon": "^1.18.4",
     "react": "^15.4.2",
     "react-calendar": "^2.17.4",
     "react-day-picker": "^7.2.4",
