--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-calendar": "^2.17.4",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.3.1"
   }
