--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "input-moment": "^0.4.0",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
+    "mysql": "^2.16.0",
     "react-calendar": "^2.17.4",
     "react-day-picker": "^7.2.4",
     "react-dom": "^15.4.2",
