--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.1.3",
     "express": "^4.15.0",
     "firebase": "^5.5.2",
     "input-moment": "^0.4.0",
