--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackreactor-groceries",
+  "name": "smartWash-App",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
