--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-day-picker": "^7.2.4",
     "react-dom": "^15.4.2",
     "react-google-maps": "^9.4.5",
+    "recompose": "^0.26.0",
     "react-router-dom": "^4.3.1"
   }
 }
