--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "firebase": "^5.5.2",
     "input-moment": "^0.4.0",
     "jquery": "^3.1.1",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.4",
     "react": "^15.4.2",
-    "mysql": "^2.16.0",
     "react-calendar": "^2.17.4",
     "react-day-picker": "^7.2.4",
     "react-dom": "^15.4.2",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^4.3.1",
+    "react-stripe-checkout": "^2.6.3",
     "recompose": "^0.26.0",
-    "react-router-dom": "^4.3.1"
+    "stripe": "^6.12.1"
   }
 }
