--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.15.0",
