--- a/package.json
+++ b/package.json
@@ -20,23 +20,32 @@
     "@material-ui/core": "^3.2.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.7.2",
     "express": "^4.15.0",
     "firebase": "^5.5.3",
+    "i18next": "^11.1.1",
+    "i18next-browser-languagedetector": "^2.2.0",
     "input-moment": "^0.4.0",
     "jquery": "^3.1.1",
+    "mdbootstrap": "^4.5.12",
+    "mdbreact": "^4.8.1",
     "mysql": "^2.16.0",
     "next": "^4.1.4",
     "nodemon": "^1.18.4",
-    "react": "^16.0.0",
+    "react": "^16.2.0",
     "react-bootstrap": "^0.32.4",
     "react-calendar": "^2.17.4",
+    "react-chartjs-2": "^2.7.4",
     "react-day-picker": "^7.2.4",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
+    "react-i18next": "^7.13.0",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.0",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.1",
     "recompose": "^0.26.0",
+    "salad-ui.chart": "^1.1.55",
     "stripe": "^6.12.1"
   }
 }
