--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "dependencies": {
     "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.15.0",
@@ -29,6 +32,7 @@
     "mysql": "^2.16.0",
     "next": "^4.1.4",
     "nodemon": "^1.18.4",
+    "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.4",
     "react-calendar": "^2.17.4",
