--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.1.1",
     "mdbootstrap": "^4.5.12",
     "mdbreact": "^4.8.2",
+    "mdl-stepper": "^1.1.6",
     "mysql": "^2.16.0",
     "next": "^4.1.4",
     "nodemon": "^1.18.4",
@@ -41,9 +42,11 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.0",
+    "react-stepper-horizontal": "^1.0.11",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.1",
     "recompose": "^0.26.0",
-    "stripe": "^6.12.1"
+    "stripe": "^6.12.1",
+    "vue-stepper-component": "^1.0.0"
   }
 }
